# homelab-analytics

./: .dockerignore  .env.example  .envrc  .envrc.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROOF_GRAIN_VEIL_HANDOVER.md  README.md  homelab-analytics.dispatch.json  opencode.json  project.toml  pyproject.toml  pytest.ini
.agents/handoffs/: 2026-04-11-contract-harbor-gate.md  2026-04-14-dispatch-review-landscape.md  2026-04-15-prism-scan-seam-follow-ons.md  2026-04-23-cinder-ledger-path-kickoff.md
.agents/overlays/: homelab-analytics.dispatch-workflows.md
.agents/sessions/: 2026-04-07-sprint-23-close.md  2026-04-08-auth-backlog-refinement-and-handover.md  2026-04-08-auth-implementation-execution-log.md  2026-04-08-harbor-policy-seam-sprint-packet-and-handover.md
.agents/skills/: README.md
.claude/: .nfs000000000000ef5600000002  .nfs00000000000149f000000067  settings.json
.claude/skills/: domain-impact-scan  kctl-extract  (+3 more)
apps/: runtime_support.py
docs/: README.md  agent-guidance-refactor.md
githooks/: commit-msg  pre-commit
requirements/: README.md  analytics-and-reporting.md  application-services.md  data-ingestion.md  data-platform.md  security-and-operations.md
scripts/: generate_walkthrough_reference.py
site/: index.html
tests/: account_test_support.py  api_route_test_support.py  auth_test_support.py  contract_price_test_support.py  control_plane_backend_fixtures.py  control_plane_test_support.py  external_registry_test_support.py  minio_test_support.py  oidc_test_support.py  postgres_test_support.py  subscription_test_support.py  test_account_transaction_inbox.py  test_account_transaction_service.py  test_account_transaction_transform.py  test_action_proposal_api.py  test_adapter_api.py  test_adapter_contracts.py  test_adapter_instance_registry.py  test_adapter_secrets.py  test_agent_guidance.py  test_agent_semantic_index.py  test_amortization.py  test_api_app.py  test_api_auth.py  test_api_machine_jwt.py  test_api_main.py  test_api_oidc.py  test_architecture_contract.py  test_asset_domain.py  test_assistant_confidence.py  test_auth_configuration.py  test_auth_permission_registry.py  test_balance_domain.py  test_blob_store.py  test_budget_domain.py  test_capability_pack_contract.py  test_category_enrichment.py  test_config_preflight.py  test_configured_csv_ingestion.py  test_configured_ingestion_definition.py  (+123 more)
tools/: project-env.sh  workflow.sh
(+464 files in other folders)
