[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-analytics"
version = "0.1.0"
description = "Self-hosted household and homelab analytics platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2",
    "boto3>=1.36",
    "duckdb>=1.0",
    "fastapi>=0.100",
    "httpx>=0.24",
    "polars>=1.0",
    "psycopg[binary]>=3.2",
    "PyJWT[crypto]>=2.10",
    "python-multipart>=0.0.9",
    "pytz>=2024.1",
    "pyarrow>=17.0",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
    "aiomqtt>=2.0",
]

[project.scripts]
homelab-analytics-api = "apps.api.main:main"
homelab-analytics-web = "apps.web.main:main"
homelab-analytics-worker = "apps.worker.main:main"

[project.urls]
Repository = "https://github.com/bayleafwalker/homelab-analytics"

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pip-audit>=2.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
]

[tool.setuptools]
packages = { find = { include = ["apps*", "packages*"] } }

[tool.mypy]
python_version = "3.11"
files = ["apps", "packages"]
ignore_missing_imports = true
warn_unused_configs = true
explicit_package_bases = true
namespace_packages = true
exclude = '(^\.venv/|^tests/fixtures/|^docs/|^infra/)'

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".local", ".tooling", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
